src/styles.css
/* ... */
img {
  image-rendering: pixelated;
}

@keyframes marquee-like-effect {
  from {
    transform: translateX(100%);
  }
  to {
    transform: translateX(-100%);
  }
}

@keyframes ellipsis {
  to {
    transform: translateY(-6em);
  }
}

@keyframes pulsate {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.1);
  }
  100% {
    transform: scale(1);
  }
}

.pulsating {
  animation: pulsate 1s infinite;
}

.two-line-ellipsis {
  text-overflow: ellipsis;
  overflow: hidden;
  width: 100%;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
}

@keyframes blink {
  0%,
  20% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}
.no-tadpoles {
  height: 2.25rem;
}

.npc-shadow::after {
  content: "";
  height: 14px;
  width: 28px;
  border-radius: 50%;
  background: #32323273;
  position: absolute;
  z-index: 0;
  bottom: -43px;
  left: 7px;
}

/* Custom scrollbar for item modal */

.lg-modal {
  max-width: 80%;
}
.scrollable::-webkit-scrollbar {
  -webkit-appearance: none;
  width: 10px;
  height: 10px;
  border-radius: 5px;
}

.scrollable::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  background-color: #f5f5f5;
  border: 2.625px solid black;
  border-radius: 5px;
}

.scrollable::-webkit-scrollbar-thumb {
  border-radius: 5px;
  border: 2.625px solid black;
  background-color: #eea368;
}

/* Hide scrollbar clsas or webkit-based browsers (Chrome, Safari and Opera) */

.scrollbar-hide::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.scrollbar-hide {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

.running {
  animation-duration: 10s;
  animation-name: running;
  animation-iteration-count: infinite;
  transition-timing-function: linear;
}

@keyframes running {
  0% {
    transform: translateX(0) scaleX(1);
    animation-timing-function: linear;
  }
  49% {
    transform: translateX(200px) scaleX(1);
    animation-timing-function: linear;
  }
  50% {
    transform: translateX(200px) scaleX(-1);
    animation-timing-function: linear;
  }
  100% {
    transform: translateX(0) scaleX(-1);
    animation-timing-function: linear;
  }
}

.boating {
  animation-duration: 100s;
  animation-name: boating;
  animation-iteration-count: infinite;
  transition-timing-function: linear;
}

.tease_boat {
  animation-duration: 50s;
  animation-name: boating;
  animation-iteration-count: infinite;
  transition-timing-function: linear;
}

@keyframes boating {
  0% {
    transform: translateX(-850px);
    animation-timing-function: linear;
  }
  100% {
    transform: translateX(1800px);
    animation-timing-function: linear;
  }
}

.swimming {
  animation-duration: 10s;
  animation-name: swimming;
  animation-iteration-count: infinite;
  transition-timing-function: linear;
}

@keyframes swimming {
  0% {
    transform: translateX(0);
    animation-timing-function: linear;
  }
  100% {
    transform: translateX(300px);
    animation-timing-function: linear;
  }
}

.pointing {
  animation-duration: 3s;
  animation-name: pointing;
  animation-iteration-count: infinite;
  transition-timing-function: ease;
}

.coins-bb-hud-backdrop {
  height: 19px;
  width: 95%;
  left: -1px;
  top: 6px;
  -webkit-mask-image: linear-gradient(
    90deg,
    rgba(0, 0, 0, 0) 0%,
    rgba(0, 0, 0, 1) 22%
  );
  mask-image: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 22%);
  z-index: -1;
}

.balance-text {
  color: white;
  /* text-shadow: 1px 1px black; */
  font-family: "Secondary";
  /* paint-order: stroke;
  -webkit-text-stroke: 3px black; */
  letter-spacing: 1px;
  font-size: 28px !important;

  text-shadow:
    -1px -1px 0 black,
    1px -1px 0 black,
    -1px 1px 0 black,
    1px 1px 0 black,
    -2px 0 0 black,
    2px 0 0 black,
    0 -2px 0 black,
    0 2px 0 black,
    -2px -2px 0 black,
    2px -2px 0 black,
    -2px 2px 0 black,
    2px 2px 0 black;
}

.map-text {
  color: white;
  /* text-shadow: 1px 1px black; */
  font-family: "Secondary";
  /* paint-order: stroke;
  -webkit-text-stroke: 3px black; */
  letter-spacing: 1px;

  text-shadow:
    -1px -1px 0 black,
    1px -1px 0 black,
    -1px 1px 0 black,
    1px 1px 0 black,
    -2px 0 0 black,
    2px 0 0 black,
    0 -2px 0 black,
    0 2px 0 black,
    -2px -2px 0 black,
    2px -2px 0 black,
    -2px 2px 0 black,
    2px 2px 0 black;
}

.yield-text {
  color: white;
  /* text-shadow: 1px 1px black; */
  font-family: Teeny;
  font-size: 12px !important;
  /* paint-order: stroke;
  -webkit-text-stroke: 3px black; */
  letter-spacing: 1px;

  text-shadow:
    -1px -1px 0 black,
    1px -1px 0 black,
    -1px 1px 0 black,
    1px 1px 0 black,
    -2px 0 0 black,
    2px 0 0 black,
    0 -2px 0 black,
    0 2px 0 black,
    -2px -2px 0 black,
    2px -2px 0 black,
    -2px 2px 0 black,
    2px 2px 0 black;
}

.sfl-hud-backdrop {
  height: 21px;
  width: 88%;
  left: -1px;
  top: 3px;
  -webkit-mask-image: linear-gradient(
    90deg,
    rgba(0, 0, 0, 0) 0%,
    rgba(0, 0, 0, 1) 22%
  );
  mask-image: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 22%);
  z-index: -1;
}

@keyframes pointing {
  0% {
    transform: translateX(0);
  }
  50% {
    transform: translateX(10px);
  }
  100% {
    transform: translateX(0);
  }
}

.launching {
  animation-duration: 8s;
  animation-name: launching;
  transition-timing-function: ease-out;
}

@keyframes launching {
  0% {
    transform: translateY(0);
  }
  100% {
    transform: translateY(-1700px);
  }
}

.cave {
  /* Start the shake animation and make the animation last for 0.5 seconds */
  animation: shake 0.5s;
  /* When the animation is finished, start again */
  animation-iteration-count: infinite;
}
/* ... */

